# obs-summarizer

./: .gitignore  CLAUDE.md  CRITICAL_ISSUES.md  FIXES_CODE_EXAMPLES.md  FIXES_REFERENCE.md  KIERAN_REVIEW.md  LICENSE  PREVENTION_INDEX.md  PREVENTION_QUICK_REFERENCE.md  PREVENTION_STRATEGIES.md  README.md  README_PATTERNS_ANALYSIS.md  SECURITY_ANALYSIS.md  SECURITY_ANALYSIS_INDEX.md  SECURITY_FIXES_ANALYSIS.md  config.example.yaml  init_think.txt  pyproject.toml
docs/: ANALYSIS_DELIVERABLES.md  ANALYSIS_INDEX.md  CODE_REVIEW_INDEX.md  ISSUE_PREVENTION_MAPPING.md  PATTERNS_ANALYSIS.md  PATTERNS_SUMMARY.txt  README_ANALYSIS.md  REVIEW_SUMMARY.md  REVIEW_SUMMARY.txt  SECURITY_REVIEW_EXECUTIVE_SUMMARY.md  study-plan.md
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_digest_writer.py  test_llm.py  test_pipeline.py  test_scanner.py  test_state.py  test_summarizer.py
todos/: 000-pending-p1-critical-api-key-exposure.md  001-pending-p1-agent-structured-output-format.md  002-pending-p1-clarify-exit-codes.md  003-pending-p1-high-path-traversal.md  004-pending-p1-agent-progress-reporting.md  005-pending-p2-dry-retry-logic-duplication.md  006-complete-p1-json-extraction-quadratic-dos.md  007-complete-p1-cache-hit-count-inverted.md  008-complete-p1-pipeline-under-tested.md  009-pending-p2-include-folders-path-traversal.md  010-pending-p2-extract-json-refactor.md  011-pending-p2-implicit-none-llm-calls.md  012-pending-p2-cache-dir-state-path-not-validated.md  013-pending-p3-config-yaml-state-json-committed.md  014-pending-p3-create-rollup-dead-code.md  (+1 more)
(+13 files in other folders)
